resources/Namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: <insert-namespace-name-here>
