resources/Pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: web-site
  labels:
    app: nginx
spec:
  containers:
    - name: web-server
      image: nginx
      ports:
        - containerPort: 80
